welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value ||
	if ((temp1<0) && (temp2>100)) || ((temp1<0) && (temp2>100)){
                                      ^